karnc/tests/fixtures/negative/112_cron_invalid_schedule/src/svc.karn
context svc

service sweeper from cron {
  on schedule("every day") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
